assets/site.css
@font-face {
  font-family: "Literata";
  src:
    local("Literata"),
    url("./Literata/Literata%5Bopsz%2Cwght%5D.woff2") format("opentype");
  font-style: normal;
}

@font-face {
  font-family: "Literata";
  src:
    local("Literata"),
    url("./Literata/Literata%5Bopsz%2Cwght%5D.woff2") format("opentype");
  font-style: italic;
}

/* latin-ext */
@font-face {
  font-family: 'Inconsolata';
  font-style: normal;
  font-weight: 400;
  font-stretch: 100%;
  src: url("./Inconsolata/inconsolata-latin-ext.woff2") format('woff2');
  unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'Inconsolata';
  font-style: normal;
  font-weight: 400;
  font-stretch: 100%;
  font-variation-settings: "wdth" 115;;
  src: url("./Inconsolata/inconsolata-latin.woff2") format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

html {
  --theme-light-background-1: #b2b8c0;
  --theme-dark-background-1: #210423;
  --theme-dark-background-2: rgb(10, 71, 7);
  --theme-link: #0001b5;
  --theme-highlight: #d4bfff;

  --font-size-small: 1rem;           /* 16px */
  --font-size-smallish: 1.125rem;    /* 18px */
  --font-size-medium: 1.25rem;       /* 20px */
  --font-size-quite-big: 1.5rem;     /* 24px */
  --font-size-big: 2rem;             /* 32px */
  --font-size-very-big: 2.5rem;      /* 40px */

  --standard-line-height: 1.5;

  --spacing-1: 0.25rem;
  --spacing-2: 0.5rem;
  --spacing-3: 0.75rem;
  --spacing-4: 1rem;
  --spacing-5: 1.25rem;
  --spacing-6: 1.5rem;


  /*
    Vertical spacings that are aligned with the body line height
  */
  --vertical-space-0: calc(var(--font-size-medium) * var(--standard-line-height) * 0.5);
  --vertical-space-1: calc(var(--font-size-medium) * var(--standard-line-height) * 1);
  --vertical-space-2: calc(var(--font-size-medium) * var(--standard-line-height) * 2);
  --vertical-space-3: calc(var(--font-size-medium) * var(--standard-line-height) * 3);
  --vertical-space-4: calc(var(--font-size-medium) * var(--standard-line-height) * 4);

  --max-line-width: 70ch;
}

body {
  background-color: var(--theme-light-background-1);
  color: var(--theme-dark-background-1);
  font-size: var(--font-size-medium);
  font-family: 'Literata', serif;
  line-height: var(--standard-line-height); /* 30px */
  padding: 0;
  margin: 0;
}

code {
  font-family: 'Source Code Pro', monospace;
  color: #f8f8f2;
  background: #272822;
  text-shadow: 0 1px rgba(0, 0, 0, 0.3);
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  word-wrap: normal;
  tab-size: 4;
  hyphens: none;
}

 /* Code blocks */
 pre {
  padding: 1em;
  overflow: auto;
  border-radius: 0.3em;
  background: #272822;
}

pre code {
  font-size: var(--font-size-smallish);
}

/* Inline code */
:not(pre) > code {
  padding: .25em .5em;
  border-radius: .3em;
  white-space: normal;
}

/*
  Default margin between paragraphs and block elements
*/
article * {
  margin-top: 0;
  margin-bottom: 1.5em;
}

article a {
  color: var(--theme-link);
}

article li {
  margin-top: 0;
  margin-bottom: 0.5lh;
}

html { height: 100%;}

p {
  overflow-wrap: break-word;
  hyphens: auto;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: bold;
  margin-top: 0;
  margin-bottom: var(--vertical-space-0);
}

h1 {
  font-size: var(--font-size-very-big);
}

h2 {
  font-size: var(--font-size-big);
}

h3 {
  font-size: var(--font-size-quite-big);
}

h4 {
  font-size: var(--font-size-medium);
}

h5 {
  font-size: var(--font-size-smallish);
}

h6 {
  font-size: var(--font-size-small);
}

/*
A layout where the first child acts as a sidebar on wide screens,
and a header on narrow screens.

Usage:

<div class="optional-sidebar-layout">
  <nav></nav>
  <article></article>
</div>
*/
.optional-sidebar-layout {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

header {
  background-color: var(--theme-dark-background-2);
  color: var(--theme-back1round);
  padding: 0;
  font-size: var(--font-size-smallish);
}

header .horizontal-list {
  margin: var(--spacing-4);
}

header nav a {
  color: var(--theme-light-background-1);
}

nav {
  margin-block: 0;
}

.optional-sidebar-layout > nav {
  flex: 1 25ch;
  color: var(--theme-light-background-1);
  padding: var(--spacing-6);
  background-color: var(--theme-dark-background-1);
}

.optional-sidebar-layout > article {
  flex: 10 50ch;
  padding: var(--spacing-6);
  font-size: var(--font-size-medium);
  background-color: var(--theme-light-background-1);
  color: var(--theme-dark-background-1);
}

.centered-content {
  display: grid;
  grid-template-columns:
    1fr
    min(var(--max-line-width), 100%)
    1fr;
}

.centered-content > * {
  grid-column: 2;
}

.centered-content img, .centered-content pre, .centered-content video {
  max-width: fit-content;
  grid-column: 1 / -1;
  margin-left: auto;
  margin-right: auto;
}

body >  {
  position: relative;
  max-width: 40rem;
  margin: auto;
}

.navigation-list {
  list-style-type: none;
  font-size: var(--font-size-smallish);
  padding: 0;
  margin-top: 0;
  margin-right: 0;
  margin-left: var(--spacing-1);
  margin-bottom: 1.5em;
  border-left: 3px solid var(--theme-light-background-1);
  padding-left: var(--spacing-3);
}

.navigation-list li {
  margin-bottom: 0.25lh;
}

nav .horizontal-list a {
  font-weight: bold;
  padding-inline: 0.5em;
}

.horizontal-list {
  display: flex;
  list-style-type: none;
  margin: 0;
  padding: 0;
  flex-direction: row;
  justify-content: flex-start;
  column-gap: 3ch;
  row-gap: 1ch;
  flex-wrap: wrap;
}

.horizontal-list li {
  display: block;
  flex-shrink: 1;
  padding: var(--spacing-0);
}

.skip-link {
  position: absolute;
  display: block;
  z-index: 999;
  left: -9999px;
  width: 100%;
  text-align: center;
  opacity: 0;
  padding: 1rem;
  margin: 0;
  color: var(--theme-light-background-1);
  background-color: var(--theme-dark-background-1);
}

.skip-link:focus {
  position: static;
  top:0;
  left: 0;
  opacity: 1;
}

.horizontal-list li.selected a {
  text-decoration: none;
}

#sidebar-nav a {
  color: var(--theme-light-background-1);
}

#sidebar-nav h1 {
  font-size: var(--font-size-medium);
  margin-top: 0.5lh;
  margin-bottom: 0.25lh;
}

#sidebar-nav h1:first-child {
  margin-top: 0;
}

#sidebar-nav h2,
#sidebar-nav h3,
#sidebar-nav h4,
#sidebar-nav h5 {
  font-size: var(--font-size-smallish);
  margin-top: calc(2 * (var(--vertical-space-2) - 1.5em) / 3);
  margin-bottom: calc((var(--vertical-space-2) - 1.5em) / 3);
}

#sidebar-nav h2:first-child,
.optional-sidebar-layout h3:first-child,
.optional-sidebar-layout h4:first-child,
.optional-sidebar-layout h5:first-child {
  margin-top: 0;
}

.full-height-with-header {
  display: flex;
  height: 100%;
  flex-direction: column;
}

.full-height-with-header .optional-sidebar-layout {
  flex-grow: 1;
}

/*
  Breadcrumb component
*/
#breadcrumb ul {
  margin-top: calc((var(--vertical-space-1) - 1.5em) / 2);
  margin-bottom: calc((var(--vertical-space-1) - 1.5em) / 2);
  font-size: var(--font-size-smallish);
  list-style-type: none;
  padding: 0;
  margin-bottom: var(--spacing-3);
}

#breadcrumb li {
  display: inline-block;
  margin-left: 0;
}

#breadcrumb li:before {
  content: ">";
  margin-left: var(--spacing-2);
  margin-right: var(--spacing-2);
}

#breadcrumb li:first-child {
  margin-left: 0;
}

#breadcrumb li:first-child:before {
  content: none;
  display: none;
}

/* Prism syntax highlighting tokens */
.token.comment,
.token.prolog,
.token.doctype,
.token.cdata {
  color: #8292a2;
}

.token.punctuation {
  color: #f8f8f2;
}

.token.namespace {
  opacity: .7;
}

.token.property,
.token.tag,
.token.constant,
.token.symbol,
.token.deleted {
  color: #f92672;
}

.token.boolean,
.token.number {
  color: #ae81ff;
}

.token.selector,
.token.attr-name,
.token.string,
.token.char,
.token.builtin,
.token.inserted {
  color: #a6e22e;
}

.token.operator,
.token.entity,
.token.url,
.language-css .token.string,
.style .token.string,
.token.variable {
  color: #f8f8f2;
}

.token.atrule,
.token.attr-value,
.token.function,
.token.class-name {
  color: #e6db74;
}

.token.keyword {
  color: #66d9ef;
}

.token.regex,
.token.important {
  color: #fd971f;
}

.token.important,
.token.bold {
  font-weight: bold;
}
.token.italic {
  font-style: italic;
}

.token.entity {
  cursor: help;
}

